feat: final adjustments
